--- a/text.org
+++ b/text.org
@@ -1,7 +1,6 @@
-#+title: Text Edition
+#+title: Text Editor
 
-
-* Basic Feature
+* Basic Features
 
 ** Title Case
 
@@ -12,6 +11,37 @@
 
 #+RESULTS:
 : titlecase-line
+
+** Spell-Checking
+
+#+begin_src elisp
+  (use-package flyspell
+    :ensure t
+    :defer t
+   :init (setq ispell-program-name "/opt/homebrew/bin/ispell")
+   :hook
+   (text-mode . turn-on-flyspell)
+   (tex-mode . turn-on-flyspell)
+   (prog-mode . flyspell-prog-mode))
+#+end_src
+ojs
+
+* Markdown
+
+#+begin_src elisp
+  (use-package markdown-mode
+    :mode (("\\.markdown$" . markdown-mode)
+           ("\\.md$" . markdown-mode))
+    :hook (markdown-mode-hook . (lambda ()
+                                  (make-local-variable 'indent-tabs-mode)
+                                  (setq indent-tabs-mode nil)
+                                  (whitespace-mode)))
+    :init (setq markdown-command "multimarkdown"))
+#+end_src   
+
+* Restructed Text (RST)
+
+Package ~rst-mode~ is now built-in
 
 * LaTeX
 
@@ -37,7 +67,7 @@ We use AucTeX to edit (La)TeX documents.
 #+RESULTS:
 
 
-* Bibliography Management
+** Bibliography Management
 
 We expect the main BibTeX library to be available from
 ~~/references/references.bib~. On new machines, a link must be created.
@@ -124,3 +154,128 @@ With Company to get the right auto-completion.
 #     :defer t
 #     :init (company-auctex-init))          ;
 # #+end_src
+
+* Org-mode
+
+  Use it a Wiki syntax to take notes and format simple documents
+
+  Overall configuration
+
+  #+begin_src emacs-lisp
+    (defvar fchauvel/notes-library "~/notes")
+  #+end_src
+
+  #+RESULTS:
+  : fchauvel/notes-library
+
+** Running Code Fragments
+   Configure how to run various code fragments
+
+   #+begin_src emacs-lisp
+          (org-babel-do-load-languages
+           'org-babel-load-languages
+           '((python . t)
+             (C . t)
+             (dot . t)
+             (R . t)
+             (ruby . t)
+             (shell . t)
+             (screen . t)
+             (scheme . t)
+             (js . t)
+             (java . t)
+             (ditaa . t)
+             (restclient . t)))
+   #+end_src
+
+   #+RESULTS:
+
+*** R
+
+    #+begin_src emacs-lisp
+      (setq org-babel-R-command "/Library/Frameworks/R.framework/Resources/R --slave --no-save")
+    #+end_src
+
+    #+RESULTS:
+    : /Library/Frameworks/R.framework/Resources/R --slave --no-save
+   
+*** Ditaa
+
+    Extra configuration to configure Ditaa (ASCII diagrams)
+  
+    #+begin_src emacs-lisp
+      (setq org-ditaa-jar-path "/opt/homebrew/Cellar/ditaa/0.11.0_1/libexec/ditaa.jar")
+    #+end_src
+   
+
+** BibTeX References
+
+   Use package ~org-ref~ to get my references available from BibTeX. We
+   make it point to the ~fchauvel/bibtex-library~ variable (see their definitions
+   in ~latex.org~).
+
+   #+begin_src emacs-lisp
+     (setq bibtex-completion-bibliography (list fchauvel/bibtex-library)
+           bibtex-completion-library-path (list fchauvel/pdf-library)
+           bibtex-completion-notes-path fchauvel/notes-library)
+
+     (use-package helm-bibtex
+       :after (helm))
+
+     (use-package org-ref
+       :after (helm-bibtex)
+       :config
+       (progn
+         (require 'bibtex)
+         (require 'org-ref-helm)))
+  #+end_src
+
+  #+RESULTS:
+  
+
+** Export to PDF / LaTeX
+
+   We use the LaTeX package ~minted~ to colorize code fragments
+   
+  #+begin_src emacs-lisp
+    (setq org-latex-listings 'minted
+          org-latex-packages-alist '(("" "minted"))
+          org-latex-pdf-process
+          '("pdflatex -shell-escape -interaction nonstopmode -output-directory %o %f"
+            "pdflatex -shell-escape -interaction nonstopmode -output-directory %o %f"
+            "pdflatex -shell-escape -interaction nonstopmode -output-directory %o %f"))
+  #+end_src
+  
+
+** Org-roam
+
+I use it to take notes about various things:
+
+See the defintion of ~fchauvel/notes-library~ at the top of this
+file.
+
+#+begin_src elisp
+  (use-package org-roam
+    :hook
+    (after-init . org-roam-mode)
+    :custom
+    (org-roam-directory fchauvel/notes-library)
+    (org-roam-db-location (concat fchauvel/notes-library "/org-roam.db"))
+    (org-roam-index-file (concat fchauvel/notes-library "/index.org"))
+    (org-roam-db-update-method 'immediate)
+    :bind (("C-c n l" . org-roam)
+           ("C-c n f" . org-roam-node-find)
+           ("C-c n g" . org-roam-graph)
+           ("C-c n i" . org-roam-insert)
+           ("C-c n I" . org-roam-insert-immediate))
+    :config
+    (org-roam-setup))
+#+end_src
+
+#+RESULTS:
+: org-roam-insert-immediate
+
+
+
+
+
