--- a/text.org
+++ b/text.org
@@ -172,30 +172,43 @@ With Company to get the right auto-completion.
    Configure how to run various code fragments
 
    #+begin_src emacs-lisp
-          (org-babel-do-load-languages
-           'org-babel-load-languages
-           '((python . t)
-             (C . t)
-             (dot . t)
-             (R . t)
-             (ruby . t)
-             (shell . t)
-             (screen . t)
-             (scheme . t)
-             (js . t)
-             (java . t)
-             (ditaa . t)
-             (restclient . t)))
+     (org-babel-do-load-languages
+      'org-babel-load-languages
+      '((python . t)
+        (C . t)
+        (dot . t)
+        (R . t)
+        (ruby . t)
+        (shell . t)
+        (screen . t)
+        (scheme . t)
+        (typescript . t)
+        (sql . t)
+        (js . t)
+        (java . t)
+        (ditaa . t)
+        (restclient . t)))
    #+end_src
 
    #+RESULTS:
 
+*** Typescript
+
+#+begin_src elisp
+  (use-package ob-typescript
+    :ensure t
+    :config
+    (setq org-babel-command:typescript "tsc"))
+#+end_src
+
+#+RESULTS:
+: t
+   
 *** R
 
     #+begin_src emacs-lisp
       (setq org-babel-R-command "/Library/Frameworks/R.framework/Resources/R --slave --no-save")
     #+end_src
-
     #+RESULTS:
     : /Library/Frameworks/R.framework/Resources/R --slave --no-save
    
