--- a/ide.org
+++ b/ide.org
@@ -344,6 +344,33 @@ We can use The origami package to fold code
 
 * Syntax Highlighting with Tree-sitter
 
+Specific language grammars have to be installed, see [[https://www.masteringemacs.org/article/how-to-get-started-tree-sitter#:~:text=Briefly%2C%20tree%2Dsitter%20is%20a,into%20a%20concrete%20syntax%20tree.][setup from
+"Mastering Emacs"]].
+
+#+begin_src elisp
+  (setq treesit-language-source-alist
+        '((bash "https://github.com/tree-sitter/tree-sitter-bash")
+          (cmake "https://github.com/uyha/tree-sitter-cmake")
+          (css "https://github.com/tree-sitter/tree-sitter-css")
+          (elisp "https://github.com/Wilfred/tree-sitter-elisp")
+          (go "https://github.com/tree-sitter/tree-sitter-go")
+          (html "https://github.com/tree-sitter/tree-sitter-html")
+          (javascript "https://github.com/tree-sitter/tree-sitter-javascript" "master" "src")
+          (json "https://github.com/tree-sitter/tree-sitter-json")
+          (make "https://github.com/alemuller/tree-sitter-make")
+          (markdown "https://github.com/ikatyang/tree-sitter-markdown")
+          (python "https://github.com/tree-sitter/tree-sitter-python")
+          (toml "https://github.com/tree-sitter/tree-sitter-toml")
+          (tsx "https://github.com/tree-sitter/tree-sitter-typescript" "master" "tsx/src")
+          (typescript "https://github.com/tree-sitter/tree-sitter-typescript" "master" "typescript/src")
+          (yaml "https://github.com/ikatyang/tree-sitter-yaml")))
+  (mapc #'treesit-install-language-grammar (mapcar #'car treesit-language-source-alist))
+#+end_src
+
+#+RESULTS:
+| bash | cmake | css | elisp | go | html | javascript | json | make | markdown | python | toml | tsx | typescript | yaml |
+
+
 #+begin_src elisp
   (add-to-list 'major-mode-remap-alist
                '(python-mode . python-ts-mode)
