--- a/navigation.org
+++ b/navigation.org
@@ -4,12 +4,13 @@
 * Helm: Incremental Completion and Narrowing
 
   #+begin_src emacs-lisp
-    (use-package helm)
-
-    (global-set-key (kbd "M-x") #'helm-M-x)
-    (global-set-key (kbd "C-x r b") #'helm-filtered-bookmarks)
-    (global-set-key (kbd "C-x C-f") #'helm-find-files)
-    (global-set-key (kbd "C-x b") #'helm-buffers-list)
+    (use-package helm
+      :config
+      (helm-mode 1)
+      (global-set-key (kbd "M-x") #'helm-M-x)
+      (global-set-key (kbd "C-x r b") #'helm-filtered-bookmarks)
+      (global-set-key (kbd "C-x C-f") #'helm-find-files)
+      (global-set-key (kbd "C-x b") #'helm-buffers-list))
   #+end_src
 
   #+RESULTS:
