--- a/navigation.org
+++ b/navigation.org
@@ -10,11 +10,12 @@
       (global-set-key (kbd "M-x") #'helm-M-x)
       (global-set-key (kbd "C-x r b") #'helm-filtered-bookmarks)
       (global-set-key (kbd "C-x C-f") #'helm-find-files)
-      (global-set-key (kbd "C-x b") #'helm-buffers-list))
+      (global-set-key (kbd "C-x b") #'helm-buffers-list)
+      (global-set-key (kbd "M-y") #'helm-show-kill-ring))
   #+end_src
 
   #+RESULTS:
-  : helm-buffers-list
+  : t
 
   When using ~helm-find-files~ One can use ~C-c C-u~ to refresh the
   file list. Newly created files may be missing.
